# jbrender

./: CMakeLists.txt  README.md
lib/input/: input.c  input.h
lib/linalg/: linalg.c  linalg.h
lib/meshtools/: fileobj.c  fileobj.h  mesh.c  mesh.h
src/: main.c
src/render/: screen.c  screen.h  world.c  world.h
